[tool.poetry]
name = "twitter_crop"
version = "0.1.0"
description = "Submission for 'Twitter Algorithmic Bias' challenge https://hackerone.com/twitter-algorithmic-bias?type=team"
authors = ["Andreas <andreas@code4thought.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
scikit-image = "^0.18.2"
invoke = "^1.6.0"
tqdm = "^4.62.0"
opencv-python-headless = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
